--- a/src/shared/styles/variables.css
+++ b/src/shared/styles/variables.css
@@ -12,5 +12,7 @@
   --background: #f0eff4;
   --main-white: #fff;
   --main-gray: #7e847f;
+  --light-gray: #f0eff4;
   --validation-error: #ef5050;
+  --main-logo: #1b1b1b;
 }
