--- a/src/pages/SignUpPage/SignUpPage.module.css
+++ b/src/pages/SignUpPage/SignUpPage.module.css
@@ -14,8 +14,50 @@
   color: var(--main-text);
 }
 
+.textEmail {
+  font-size: 14px;
+  line-height: 129%;
+  letter-spacing: -0.01em;
+  color: var(--main-text);
+  margin-top: 20px;
+  text-align: center;
+  padding: 40px;
+}
+.btn {
+  border-radius: 30px;
+  padding: 16px 126px;
+
+  height: 50px;
+  background-color: var(--accent-water);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 129%;
+  letter-spacing: -0.01em;
+  text-align: center;
+  color: var(--main);
+  border: none;
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: var(--accent-hover-water);
+}
+.notifyWrap {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
 @media screen and (min-width: 768px) {
   .text {
+    font-size: 16px;
+    line-height: 150%;
+    padding: 60px;
+  }
+  .btn {
+    height: 60px;
     font-size: 16px;
     line-height: 150%;
   }
