--- a/src/shared/styles/variables.css
+++ b/src/shared/styles/variables.css
@@ -3,6 +3,7 @@
   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   --main: #323f47;
   --main-text: #2f2f2f;
+  --main-text-white: #f6f6f6;
   --main-border: #2f2f2f33;
   --main-placeholder: #2f2f2f99;
   --logout-btn: #737476;
