--- a/src/pages/SignInPage/SignInPage.module.css
+++ b/src/pages/SignInPage/SignInPage.module.css
@@ -14,6 +14,13 @@
   color: var(--main-text);
 }
 
+.title {
+  font-size: 36px;
+  line-height: 106%;
+  letter-spacing: -0.01em;
+  color: var(--main);
+  text-align: center;
+}
 @media screen and (min-width: 768px) {
   .text {
     font-size: 16px;
