--- a/src/pages/SignUpPage/SignUpPage.module.css
+++ b/src/pages/SignUpPage/SignUpPage.module.css
@@ -50,6 +50,13 @@
   justify-content: center;
   margin: auto;
 }
+.title {
+  font-size: 36px;
+  line-height: 106%;
+  letter-spacing: -0.01em;
+  color: var(--main);
+  text-align: center;
+}
 @media screen and (min-width: 768px) {
   .text {
     font-size: 16px;
