--- a/src/components/HeaderNavigation/HeaderNavigation.module.css
+++ b/src/components/HeaderNavigation/HeaderNavigation.module.css
@@ -1,17 +1,12 @@
 .list {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  align-items: center;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+  display: none;
 }
 
 .link {
   font-size: 16px;
   line-height: 150%;
   color: var(--main-text-white);
+  transition: all var(--transition);
 }
 
 .active {
@@ -22,13 +17,17 @@
   justify-content: center;
   background-color: var(--main-white);
   color: var(--main-text);
-  transition: all var(--transition);
   border-radius: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .list {
-    flex-direction: row;
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px 20px;
     background-color: var(--main-gray);
     border-radius: 60px;
