hero, advice, animations

--- a/src/shared/styles/base.css
+++ b/src/shared/styles/base.css
@@ -1,6 +1,6 @@
 body {
   font-family: Poppins;
-  background-color: var(--main-white);
+  background-color: var(--main-text-white);
   color: var(--main-text);
   font-weight: 400;
 }
