--- a/src/components/ExercisesSection/ExercisesSection.module.css
+++ b/src/components/ExercisesSection/ExercisesSection.module.css
@@ -3,6 +3,7 @@
   border-radius: 30px;
   background-color: #e8e8e8;
   padding: 40px 14px;
+  min-height: 760px;
 }
 
 .title {
@@ -28,13 +29,19 @@
   gap: 20px;
   margin-bottom: 40px;
 }
+
 .notFound {
   font-size: 14px;
   line-height: 129%;
   letter-spacing: -0.01em;
   text-align: center;
   color: var(--main-logo);
+  margin: auto;
+  margin-top: 200px;
+  max-width: 295px;
+  min-height: 100%;
 }
+
 .accent {
   font-weight: 500;
   color: var(--main-gray);
@@ -43,6 +50,7 @@
   .section {
     padding: 60px 40px;
     border-radius: 50px;
+    min-height: 1090px;
   }
   .title {
     font-size: 44px;
@@ -61,17 +69,25 @@
   .notFound {
     font-size: 18px;
     line-height: 133%;
+    max-width: 536px;
+    margin-top: 300px;
   }
 }
 
 @media screen and (min-width: 1440px) {
   .section {
     padding: 60px 48px;
+    min-height: 830px;
   }
 
   .filtersWrap {
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 30px;
+  }
+
+  .notFound {
+    max-width: 684px;
+    margin-top: 200px;
   }
 }
