--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -32,6 +32,15 @@
   fill: none;
 }
 
+.clearQueryBtn {
+  position: absolute;
+  top: 50%;
+  right: 50px;
+  transform: translateY(-50%);
+  background-color: inherit;
+  border: none;
+  line-height: 0;
+}
 @media screen and (min-width: 768px) {
   .input {
     width: 246px;
