--- a/src/shared/components/Loader/Loader.module.css
+++ b/src/shared/components/Loader/Loader.module.css
@@ -1,5 +1,14 @@
 .loader {
-  margin-left: auto;
-  margin-right: auto;
-  width: 100px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all var(--transition);
+  animation: rotate 2.5s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(-360deg);
+  }
 }
